Bug 473147 - Connections KCM takes ~3 seconds to load
Summary: Connections KCM takes ~3 seconds to load
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_networkmanagement (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-08-08 12:06 UTC by Patrick Silva
Modified: 2024-01-10 17:03 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2023-08-08 12:06:37 UTC
STEPS TO REPRODUCE
1. open System Settings
2. click on "Connections" in the sidebar
3. 

OBSERVED RESULT
the KCM takes ~3 seconds to load

EXPECTED RESULT
the KCM loads immediately

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.240.0
Qt Version: 6.6.0
Graphics Platform: Wayland
Comment 1 Nate Graham 2023-08-09 18:13:24 UTC
Can reproduce.
Comment 2 Nicolas Fella 2023-11-11 00:42:04 UTC
Git commit c2da775cf8605eb74a4c3a16d5cc54ad2aa3edee by Nicolas Fella.
Committed on 11/11/2023 at 01:40.
Pushed by nicolasfella into branch 'master'.

Use correct Event to detect palette change

PaletteChanged is emitted any time a widget changes something in its palette.

What we want is to get notified when the global palette changes, which is a different event

M  +1    -1    kirigami-plasmadesktop-integration/plasmadesktoptheme.cpp

https://invent.kde.org/frameworks/qqc2-desktop-style/-/commit/c2da775cf8605eb74a4c3a16d5cc54ad2aa3edee
Comment 3 Patrick Silva 2023-12-26 11:21:04 UTC
This bug persists.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.91.90
KDE Frameworks Version: 5.248.0
Qt Version: 6.6.1
Graphics Platform: Wayland
Comment 4 Nate Graham 2024-01-09 23:23:56 UTC
Are you sure? I can't reproduce it anymore myself. It is still taking exactly the same amount of time to load that it used to, or is is still slow, but less slow then before? Also can you try again with the latest git master?
Comment 5 Patrick Silva 2024-01-10 12:29:20 UTC
Currently the KCM takes 0.5 second to load on neon unstable.
Comment 6 Nate Graham 2024-01-10 17:03:46 UTC
In that case it sounds like the original issue is fixed by Nicolas's commit, but there is still something *else* causing a second smaller delay on opening. Can you submit a new bug report for it?