Use correct Event to detect palette change

PaletteChanged is emitted any time a widget changes something in its palette.

What we want is to get notified when the global palette changes, which is a different event

BUG: 473147